--- a/diaryapp/templates/diaryapp/diary.html
+++ b/diaryapp/templates/diaryapp/diary.html
@@ -71,11 +71,7 @@
                 <div class="card">
                     <a href="{% url 'detail_diary_by_id' unique_diary_id=item.diary.unique_diary_id %}" class="link_card">
                         <div class="card-img">
-                            {% if item.diary.representative_image %}
-                                <img src="data:image/png;base64,{{ item.diary.representative_image.image_file }}" width="300" alt="Representative Image">
-                            {% else %}
-                                <span class="txt_noimg">No image</span>
-                            {% endif %}
+                            <span class="txt_noimg">No image</span>
                         </div>
                         <div class="card-body">
                             <strong class="card-title">{{ item.diary.diarytitle }}</strong>
@@ -136,7 +132,7 @@ $(document).ready(function() {
 
         // 제목이 비어있으면 기본 제목 설정
         if (titleDiary === "") {
-            titleDiary = "{{ user.name|default:'여행자' }}의 여행 다이어리";
+            titleDiary = "{{ user.username|default:'여행자' }}의 여행 다이어리";
         }
 
         $.ajax({
