--- a/diaryapp/templates/diaryapp/detail_diary.html
+++ b/diaryapp/templates/diaryapp/detail_diary.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
-                    <button id="wishlistBtn" data-place="{{ diary.place }}" class="btn btn-secondary">찜하기</button>
+                    <button id="wishlistBtn" data-place="{{ diary.place }}" data-plan-id="{{ diary.plan_id }}" class="btn btn-secondary">찜하기</button>
                     <a id="travelPlanBtn" class="btn btn-third" href="#">여행 계획으로 이동</a>
                 </div>
             </div>
