--- a/diaryapp/templates/diaryapp/diary.html
+++ b/diaryapp/templates/diaryapp/diary.html
@@ -71,7 +71,11 @@
                 <div class="card">
                     <a href="{% url 'detail_diary_by_id' unique_diary_id=item.diary.unique_diary_id %}" class="link_card">
                         <div class="card-img">
+                            {% if item.diary.encoded_representative_image %}
+                            <img src="data:image/png;base64,{{ item.diary.encoded_representative_image }}" width="300" alt="{{item.diary.diarytitle}} 대표 이미지">
+                            {% else %}
                             <span class="txt_noimg">No image</span>
+                            {% endif %}
                         </div>
                         <div class="card-body">
                             <strong class="card-title">{{ item.diary.diarytitle }}</strong>
