--- a/travel_recommend/templates/service_main.html
+++ b/travel_recommend/templates/service_main.html
@@ -9,7 +9,7 @@
 
         <div class="d-flex justify-content-center">
             <div class="card-deck">
-                <div class="card option-card text-center mx-5" onclick="location.href='{% url 'recommend' %}'">
+                <div class="card option-card text-center mx-5" onclick="location.href='{% url 'travel:recommend' %}'">
                     <div class="card-body d-flex flex-column justify-content-center auto-card">
                         <h5 class="card-title">자동 생성</h5>
                         <p class="card-text">당신만을 위한 맞춤형 추천</p>
