--- a/travel_recommend/templates/recommendations/create_schedule.html
+++ b/travel_recommend/templates/recommendations/create_schedule.html
@@ -46,7 +46,10 @@
             padding: 20px;
         }
         .form-navigation {
-            display: flex;
+            display: flex;Docker Desktop - WSL distro terminated abruptly
+A WSL distro that Docker Desktop relies on has exited unexpectedly. This usually happens as a result of an external entity terminating WSL (e.g. running wsl --shutdown). Restart Docker Desktop. If the issue persists, collect diagnostics and submit an issue⁠.
+
+running wsl-bootstrap: exit status 1
             justify-content: space-between;
             margin-top: 20px;
         }
@@ -995,7 +998,7 @@
                         console.log('***Response***', response); // 응답 데이터 확인
 
                         if (response.plan_id) {
-                            window.location.href = '/results/' + response.plan_id;
+                            window.location.href = '/travel/results/' + response.plan_id;
                         } else {
                             alert('추천 및 저장 중 오류가 발생했습니다');
                         }
@@ -1011,7 +1014,7 @@
                 var regionCode = this.value;
                 console.log('Region selected:', regionCode);
                 if (regionCode) {
-                    fetch(`/ajax/load-subregions/?region=${regionCode}`)
+                    fetch(`/travel/ajax/load-subregions/?region=${regionCode}`)
                     .then(response => {
                         console.log('AJAX request sent');
                         return response.json();
