뭔가를 여러군데 수정했어요..

--- a/Jpage/templates/Jpage/map.html
+++ b/Jpage/templates/Jpage/map.html
@@ -381,7 +381,7 @@
         var citydistrictSelect = document.getElementById('citySelect');
 
         $.ajax({
-            url: '/citydistrict/',
+            url: '/Jpage/citydistrict/',
             type: 'GET',
             data: {
                 'areacode': AreaCode
